structure and components defined

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2,9 +2,6 @@ body {
     background-color: aquamarine;
 }
 
-#body {
-    background-color: "lightblue";
-}
 #board {
     display: flex;
     flex-direction: row;
@@ -14,9 +11,9 @@ body {
 }
 
 #project {
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
 
-    background-color: aquamarine;
+    background-color: rgb(255, 127, 212);
     margin: 50px;
 }
