--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ a {
     font-family: "Trebuchet MS";
 }
 
+/* ------------------------------HOME---------------------------*/
 #sam a {
     color: rgb(141, 202, 255);
 }
@@ -55,26 +56,6 @@ a {
     cursor: default;
     transition: 500ms;
 }
-#head {
-    display: flex;
-    flex-direction: column;
-}
-#head h3 {
-    font-size: 35px;
-}
-#head p {
-    font-size: 15px;
-}
-
-#projLogo {
-    width: 200px;
-    height: 200px;
-    margin: 30px;
-    border: 1px solid white;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 100);
-    cursor: pointer;
-}
 
 #navbar {
     position: fixed;
@@ -104,6 +85,29 @@ p {
 #navbar:hover {
     left: 0;
     opacity: 100%;
+}
+
+/* ------------------------------PROJECT---------------------------*/
+
+#head {
+    display: flex;
+    flex-direction: column;
+}
+#head h3 {
+    font-size: 35px;
+}
+#head p {
+    font-size: 15px;
+}
+
+#projLogo {
+    width: 200px;
+    height: 200px;
+    margin: 30px;
+    border: 1px solid white;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 100);
+    cursor: pointer;
 }
 
 #appear {
@@ -139,6 +143,9 @@ p {
     margin-left: 150px;
     padding-left: 20px;
     padding-right: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #pTitle {
     font-size: 30px;
@@ -171,6 +178,57 @@ p {
     border: 1px solid rgb(255, 255, 255);
     margin: 20px;
     width: 500px;
-
     object-fit: scale-down;
+}
+
+@media only screen and (max-width: 800px) {
+    body {
+        margin: 0;
+        width: 100vw;
+        position: absolute;
+    }
+    #appear {
+        height: 50px;
+        width: 100vw;
+        padding-top: 0px;
+        padding-left: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    #projBody {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 50px;
+        padding-left: 20px;
+
+        padding-right: 20px;
+    }
+    #pList p {
+        margin: 0;
+        padding: 15px;
+    }
+    #pList {
+        width: 100%;
+        background-color: rgb(190, 190, 190);
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        left: 0;
+        padding: 0;
+        height: auto;
+    }
+    #pDescription {
+        padding-left: 0px;
+    }
+
+    #pImg {
+        margin: 20px;
+        width: 300px;
+        object-fit: scale-down;
+    }
+}
+@media only screen and (max-width: 450px) {
 }
