--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@
 body {
     margin: 0;
     margin-left: 2px;
-
     background-color: rgb(0, 0, 0);
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
@@ -26,6 +25,7 @@ a {
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
     display: flex;
+
     flex-wrap: wrap;
 }
 #sam h3 {
@@ -36,18 +36,24 @@ a {
     font-size: 20px;
     margin-left: 20px;
 }
-#header {
+#background {
     height: 100vh;
     min-height: 550px;
+    position: fixed;
 }
 
 #board {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #projectPreview {
-    width: 100vw;
-    height: 100vh;
+    position: relative;
+    top: 100vh;
+    width: 50vw;
+    height: 50vh;
     min-height: 550px;
     display: flex;
     flex-direction: column;
@@ -55,6 +61,7 @@ a {
     align-items: center;
     cursor: default;
     transition: 500ms;
+    margin-bottom: 100px;
 }
 
 #navbar {
