--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,7 @@ a {
     display: flex;
     flex-direction: column;
     transition: 1s;
+    z-index: 1;
 }
 #navBar a,
 p {
@@ -144,6 +145,7 @@ p {
     flex-direction: column;
     opacity: 100%;
     transition: 1s;
+    z-index: 2;
 }
 #appear p:hover {
     color: rgb(96, 105, 172);
@@ -163,6 +165,8 @@ p {
     flex-wrap: wrap;
 }
 #projBody {
+    transform: translateX(20px);
+    background-color: rgba(0, 0, 0, 0.611);
     transition: 1s;
     text-align: center;
     margin-left: 150px;
@@ -171,6 +175,8 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    z-index: 1;
 }
 #pTitle {
     font-size: 30px;
@@ -213,6 +219,39 @@ p {
     object-fit: scale-down;
 }
 
+/* ------------------------------CONTACT---------------------------*/
+
+#contact {
+    display: flex;
+    flex-direction: row;
+}
+#messageForm {
+    padding: 20px;
+    z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
+#messageForm h1 {
+    color: rgb(141, 202, 255);
+    padding-left: 20px;
+}
+
+#messageForm form {
+    background-color: rgba(141, 202, 255, 0.482);
+    padding: 20px;
+}
+
+#messageForm form div textarea {
+    height: 300px;
+    width: 60%;
+}
+
+#messageForm form div input {
+    width: 60%;
+}
+
 @media only screen and (max-width: 800px) {
     body {
         margin: 0;
@@ -229,6 +268,7 @@ p {
         justify-content: space-around;
     }
     #projBody {
+        transform: translateX(0px);
         width: 100%;
         margin-left: 0;
         margin-top: 50px;
